fix video problem, embed youtube using ifram

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,9 @@
       <div class="navbar-header"><h1>TickleMore Demo</h1></div>
     </nav>
     <div class="video-container">
-      <video width="300" controls class="video-align">
-        <source src="/images/ticklemore_video_deploy.mp4" type="video/mp4">
-        </video>
-      </div>
+      <iframe width="420" height="550" src="https://www.youtube.com/embed/H5uGKkZ1bFE"
+      frameborder="0" allowfullscreen></iframe>
     </div>
+  </div>
 </body>
 </html>
